# Data_Analysis_2

./: README.md  data.json  envirnoment.yml  example_1.py  individual.py  individualhard.py  pyproject.toml  requirements.txt  shop.json  test_for_hard.json  test_for_hardd.json  trains.json
